[package]
name = "hyparview"
version = "0.1.0"
authors = ["Ross Delinger <rossdylan@fastmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
async-trait = "0.1.56"
futures = "0.3"
indexmap = "1.9"
leaky-bucket = "0.12.1"
lru = "0.7"
metrics = "0.20.1"
prost = "0.11"
rand = "0.8"
svix-ksuid = "0.6"
thiserror = "1"
tokio = {version = "1.19", features = ["full"]}
tokio-stream = "0.1.9"
tonic = "0.8"
tower = "0.4"
tracing = "0.1"
trust-dns-resolver = "0.21"

[dev-dependencies]
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.8"
